--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "babel-core": "^6.23.1",
     "babel-preset-es2015": "^6.22.0",
     "grunt": "^1.0.1",
-    "grunt-babel": "^6.0.0"
+    "grunt-babel": "^6.0.0",
+    "underscore": "^1.8.3"
+  },
+  "dependencies": {
+    "boom": "^4.2.0",
+    "joi": "^10.2.2"
   }
 }
