--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple project that creates basic RESTful endpoints basing on Sequelize.js models",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "sequelize db:seed:undo:all && sequelize db:seed:all && node test/index.js"
   },
   "keywords": [
     "hapi",
@@ -20,6 +20,10 @@
     "babel-preset-es2015": "^6.22.0",
     "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
+    "hapi": "^16.1.0",
+    "pg": "^6.1.2",
+    "sequelize": "^3.30.2",
+    "sequelize-cli": "^2.5.1",
     "underscore": "^1.8.3"
   },
   "dependencies": {
